# employee-app

./: .gitignore  README.md
backend-rust/: Cargo.toml
backend-rust/src/: db.rs  employee_handlers.rs  employee_model.rs  lib.rs  login_middleware.rs  login_model.rs  main.rs  middlewares.rs  user_handler.rs  user_model.rs
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.css  main.jsx
frontend-react/src/api/: api.jsx
frontend-react/src/components/Employee/EmployeeDetail/: employeeDetail.css  employeeDetails.jsx
frontend-react/src/components/Employee/EmployeeRegisterForm/: EmployeeRegisterForm.css  EmployeeRegisterForm.jsx
frontend-react/src/components/Employee/SearchEmployee/: SearchEmployee.css  SearchEmployee.jsx
frontend-react/src/components/Employee/UpdateEmployee/: UpdateEmployee.css  UpdateEmployee.jsx
frontend-react/src/components/EmployeeDetails/: Employee.css  Employee.jsx
frontend-react/src/components/Navbar/: Navbar.css  Navbar.jsx
frontend-react/src/components/User/CreateUser/: CreateUser.css  CreateUser.jsx
frontend-react/src/components/User/UserDetail/: UserDetail.css  UserDetail.jsx
frontend-react/src/context/: AuthContext.jsx  EmployeeContext.jsx  UserContext.jsx
frontend-react/src/hook/: ProtectRoute.jsx
frontend-react/src/pages/: Layout.jsx
frontend-react/src/pages/Home/: Home.css  Home.jsx
frontend-react/src/pages/Login/: Login.css  Login.jsx
frontend-react/src/pages/Nopage/: Nopage.css  Nopage.jsx
frontend-react/src/utils/: logout.jsx
